--- a/FTC_Stalker_web/package.json
+++ b/FTC_Stalker_web/package.json
@@ -9,10 +9,13 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
+
   "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.28.0"
   },
+
   "devDependencies": {
     "@eslint/js": "^9.33.0",
     "@types/react": "^19.1.10",
